made menu upgrade some method